# paco

./: .gitignore  LICENSE  Makefile  README.md  setup.cfg  setup.py  tox.ini
examples/: recursive_array.py
paco/tree/: nodes.py
src/paco/: __init__.py  atomic.py  combinators.py  lexer.py  miscellaneous.py
src/paco/parsers/: __init__.py  combinators.py  parser_state.py
src/paco/tree/: __init__.py  nodes.py
tests/: test_char_parser.py  test_choice_parser.py  test_keepleft_parser.py  test_keepright_parser.py  test_lazy_parser.py  test_literal_parser.py  test_many_parser.py  test_regex_parser.py  test_sepby_parser.py  test_sequence_parser.py  test_token_parser.py
