[metadata]
name = paco
version = 2.1.0-dev
author = Salih Tasdelen
author_email = salih.tasdelen@hotmail.com
description = Parser Combinators Module for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SalihTasdelen/paco
project_urls =
    Bug Tracker = https://github.com/SalihTasdelen/paco/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
